--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ swagger.base.package=com.authright.happyPrime.controller
 randomorg.api.base_url=https://www.random.org/integers
 randomorg.api.query_parameter=num=1&min=1&max=1000000&col=1&base=10&format=plain&rnd=new
 
+management.endpoints.web.exposure.include=*
+
 
 
 
