--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,11 @@
 		</dependency>
         <dependency>
              <groupId>org.springframework.boot</groupId>
-             <artifactId>spring-boot-starter-jetty</artifactId>
+             <artifactId>spring-boot-starter-tomcat</artifactId>
+        </dependency>
+       <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
             <groupId>com.hynnet</groupId>
@@ -111,7 +115,7 @@
             <dependencies>
                 <dependency>
                     <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-jetty</artifactId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
                     <scope>provided</scope>
                 </dependency>
             </dependencies>
